Migrate toolchain to gradle + paperweight, update to 1.20