@@ -1,12 +1,16 @@
 package com.vanillage.raytraceantixray.tasks;
 
-import java.util.TimerTask;
-import java.util.concurrent.RejectedExecutionException;
-import java.util.stream.Collectors;
-
 import com.vanillage.raytraceantixray.RayTraceAntiXray;
+import com.vanillage.raytraceantixray.data.PlayerData;
+import com.vanillage.raytraceantixray.util.TimeFormatting;
 
-public final class RayTraceTimerTask extends TimerTask {
+import java.util.List;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.TimeUnit;
+import java.util.logging.Level;
+
+public final class RayTraceTimerTask implements Runnable {
+
     private final RayTraceAntiXray plugin;
 
     public RayTraceTimerTask(RayTraceAntiXray plugin) {
@@ -15,20 +19,22 @@ public final class RayTraceTimerTask extends TimerTask {
 
     @Override
     public void run() {
-        boolean timings = plugin.isTimings();
-        long start = timings ? System.currentTimeMillis() : 0L;
-
         try {
-            plugin.getExecutorService().invokeAll(plugin.getPlayerData().values().stream().map(p -> p.getCallable()).collect(Collectors.toList()));
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        } catch (RejectedExecutionException e) {
-
-        }
-
-        if (timings) {
-            long stop = System.currentTimeMillis();
-            plugin.getLogger().info((stop - start) + "ms per ray trace tick.");
-        }
+            final List<Runnable> jobs = plugin.getPlayerData().values().stream().map(PlayerData::getRunnable).toList();
+            plugin.getExecutorService().submit(() -> {
+                final boolean timings = plugin.isTimings();
+                final long startTime = timings ? System.nanoTime() : 0L;
+                try {
+                    for (Runnable job : jobs) {
+                        job.run();
+                    }
+                } catch (Throwable t) {
+                    plugin.getLogger().log(Level.SEVERE, "Error thrown while raytracing: ", t);
+                }
+                if (timings) {
+                    plugin.getLogger().info((TimeFormatting.format(TimeUnit.NANOSECONDS, System.nanoTime() - startTime, TimeUnit.MICROSECONDS, TimeUnit.MILLISECONDS)) + " per ray trace tick.");
+                }
+            });
+        } catch (RejectedExecutionException e) {}
     }
 }
